--- a/AngularStore/include/style.css
+++ b/AngularStore/include/style.css
@@ -143,3 +143,15 @@ hr{
     font-family: 'Open Sans', sans-serif;
     cursor: pointer;
 }
+#orderby{
+    margin: auto;
+    margin-top: 50px;
+    text-align: center;
+}
+#orderby span{
+    font-size: 16px;
+    font-weight: bold;
+}
+#orderby select{
+    margin-top: 10px;
+}
